# speech-to-text

./: .gitignore  LICENSE  pyproject.toml
docs/: conf.py  index.rst  modules.rst  ols2t.rst
src/ols2t/: __init__.py  app.py  core.py  main.py  models.py  settings.py  types.py
src/ols2t/interfaces/: base.py  cli.py  factory.py  http_api.py
src/ols2t/speech_to_text_models/: base.py  factory.py  merged.py  segment_merging.py  whisper.py
stubs/: faster_whisper.pyi
stubs/ctranslate2/: __init__.pyi  models.pyi
stubs/faster_whisper/: __init__.pyi  audio.pyi
tests/: conftest.py  test_app.py  test_core.py  test_exported.py  test_integration_cli.py  test_integration_http_api.py  test_integration_module.py  test_models.py
tests/fixtures/: hello_ja_decoded.npy  longtext_all.m4a  longtext_all_decoded.npy  tiny_ja_settings.json  tiny_ja_settings.yaml
tests/fixtures/webm_chunks/: audio.webm  webm_decoded.npy
tests/interfaces/: test_factory.py  test_http_api.py
tests/speech_to_text_models/: test_factory.py  test_merged.py  test_segment_merging.py  test_whisper.py
