[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "ols2t"
description = ""
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "oltl @ git+https://github.com/osoekawaitlab/ol-type-library",
    "faster-whisper",
    "numpy",
]

[project.urls]
Source = "https://github.com/osoekawaitlab/speech-to-text"

[tool.setuptools]
packages=["ols2t"]

[tool.setuptools.package-data]
ols2t = ["py.typed"]

[project.scripts]
ols2t = "ols2t.main:main"

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "freezegun",
    "types-python-dateutil",
    "factory_boy",
    "polyfactory",
    "httpx",
    "pytest-random-order",
    "uvicorn",
]
prod=[
]
native_device_interface=[
    "pyaudio",
]
docs=[
]

[tool.pytest.ini_options]
addopts = ["-sv", "--random-order", "--doctest-modules", "--cov=ols2t", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "src/ols2t"]
filterwarnings = [
    "error",
]
markers = [
    "slow: marks tests as slow"
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"
per-file-ignores = ["*.pyi:E301,E302"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[testenv]
setenv =
    VIRTUALENV_PIP = 24.1
deps =
    -e .[dev]
commands =
    black src/ tests
    isort src/ tests
    pytest -m "not slow"
    pflake8 src/ tests/ stubs/
    mypy src/ols2t --strict --show-traceback
    mypy tests --strict

[testenv:fulltest]
setenv =
    VIRTUALENV_PIP = 24.1
deps =
    -e .[dev]
commands =
    black src/ tests
    isort src/ tests
    pytest
    pflake8 src/ tests/ stubs/
    mypy src/ols2t --strict --show-traceback
    mypy tests --strict
"""
